# Drone-Telemetry-Simulator

./: .gitignore  CMakeLists.txt  MovementStrategy.h  README.md  TelemetryTypes.cpp  TelemetryTypes.h  dronesimulator.cpp  dronesimulator.h  droneworker.cpp  droneworker.h  hoverstrategy.cpp  hoverstrategy.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  randomwalkstrategy.cpp  randomwalkstrategy.h  simulatorfactory.cpp  simulatorfactory.h  telemetrymodel.cpp  telemetrymodel.h  utils.cpp  utils.h
Tests/: test_hover.cpp  test_randomwalk.cpp
